Add published status to embeds
